--- a/style.css
+++ b/style.css
@@ -7,3 +7,29 @@ body {
     font-weight: 400;
 }
 
+.container {
+    width: 1110px;
+    margin: 0 auto;
+}
+
+.top-line {
+    background-color: #E5E5E5;
+    padding: 17px 0 16px 0;
+}
+
+.top {
+    text-align: center;
+}
+
+.nav-item {
+    display: inline-block;
+    text-transform: capitalize;
+    color: #333333;
+    font-size: 14px;
+    line-height: 16px;
+    margin-right: 30px;
+}
+
+.nav-item:last-child {
+    margin-right: 0;
+}
