--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     margin: 0 auto;
 }
 
+.clearfix {
+    clear: both;
+}
+
 .top-line {
     background-color: #E5E5E5;
     padding: 17px 0 16px 0;
@@ -23,13 +27,66 @@ body {
 
 .nav-item {
     display: inline-block;
+    vertical-align: top;
+    margin-right: 30px;
+}
+
+.link {
+    text-decoration: none;
     text-transform: capitalize;
     color: #333333;
     font-size: 14px;
     line-height: 16px;
-    margin-right: 30px;
 }
 
 .nav-item:last-child {
     margin-right: 0;
+}
+
+.header {
+    border-bottom: 1px solid #EFEFEF;;
+}
+
+.logo {
+    float: left;
+    width: 80px;
+    height: 80px;
+    margin: 20px 0 20px 0;
+}
+
+.beauty {
+    float: left;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #F13C6E;
+    font-size: 36px;
+    line-height: 42px;
+    letter-spacing: 0.1em;
+    margin: 22px 0 21px 0;
+    padding: 19px 0 19px 20px;
+}
+
+.right-header {
+    float: right;
+}
+
+.phone {
+    float: left;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 19px;
+    color: black;
+    margin: 50px 40px 51px 0;
+}
+
+.button {
+    float: left;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 13px 26px;
+    background-color: white;
+    border: 2px solid #F13C6E;
+    border-radius: 40px;
+    margin: 40px 0;
+    cursor: pointer;
 }
