--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
 }
 
@@ -89,4 +89,26 @@ body {
     border-radius: 40px;
     margin: 40px 0;
     cursor: pointer;
+}
+
+.services {
+    padding: 30px 0;
+}
+
+.menu {
+    margin: 0 auto;
+    width: 675px;
+}
+
+.menu-link {
+    float: left;
+    margin-right: 40px;
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.menu-link.last {
+    margin-right: 0;
 }
