--- a/style.css
+++ b/style.css
@@ -116,7 +116,10 @@ body {
 .sale {
     height: 604px;
     background-image: url('images/sale.png');
+    background-position: center;
+    background-size: cover;
     padding: 192px 0 193px 0;
+    margin-bottom: 80px;
 }
 
 .sale-title {
@@ -150,4 +153,66 @@ body {
 .link-word {
     display: inline-block;
     width: 117px;
+}
+
+.cards {
+    background-color: #E5E5E5;
+    padding: 80px 0 100px 0;
+}
+
+.card-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 38px;
+}
+
+.card {
+    float: left;
+    margin-right: 30px;
+    padding-top: 25px;
+    padding-bottom: 34px;
+    width: 255px;
+    background-color: white;
+    text-align: center;
+}
+
+.card:nth-child(4n) {
+    margin-right: 0;
+}
+
+.card-image {
+    width: 125px;
+    height: 166px;
+    margin: 0 65px 20px 65px;
+}
+
+.card-text {
+    width: 195px;
+    color: #333333;
+    font-size: 14px;
+    line-height: 20px;
+    margin: 0 30px 20px 30px;
+}
+
+.price {
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 25px;
+    letter-spacing: 0.05em;
+    margin-bottom: 20px;
+}
+
+.buy {
+    width: 130px;
+    height: 35px;
+    padding: 9px 40px 9px 39px;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.05em;
+    text-decoration: none;
+    color: white;
+    background-color: #F13C6E;
+    border-radius: 30px;
+    border: none;
 }
