--- a/style.css
+++ b/style.css
@@ -49,21 +49,7 @@ body {
 
 .logo {
     float: left;
-    width: 80px;
-    height: 80px;
-    margin: 20px 0 20px 0;
-}
-
-.beauty {
-    float: left;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #F13C6E;
-    font-size: 36px;
-    line-height: 42px;
-    letter-spacing: 0.1em;
-    margin: 22px 0 21px 0;
-    padding: 19px 0 19px 20px;
+    margin: 20px 0;
 }
 
 .right-header {
@@ -119,7 +105,6 @@ body {
     background-position: center;
     background-size: cover;
     padding: 192px 0 193px 0;
-    margin-bottom: 80px;
 }
 
 .sale-title {
@@ -138,16 +123,15 @@ body {
     margin-bottom: 62px;
 }
 
-.sale-link {
+.button.sale-link {
+    float: none;
     color: white;
-    font-size: 14px;
-    line-height: 16px;
+    background-color: #F13C6E;
     letter-spacing: 0.05em;
     text-decoration: none;
     border: 2px solid #FFFFFF;
-    border-radius: 40px;
-    padding: 13px 26px;
     text-align: center;
+    margin: 0;
 }
 
 .link-word {
@@ -177,7 +161,7 @@ body {
     text-align: center;
 }
 
-.card:nth-child(4n) {
+.card:nth-child(4n+1) {
     margin-right: 0;
 }
 
@@ -203,16 +187,16 @@ body {
     margin-bottom: 20px;
 }
 
-.buy {
+.button.buy {
+    float: none;
     width: 130px;
     height: 35px;
     padding: 9px 40px 9px 39px;
-    font-size: 14px;
-    line-height: 16px;
     letter-spacing: 0.05em;
     text-decoration: none;
     color: white;
     background-color: #F13C6E;
     border-radius: 30px;
     border: none;
+    margin: 0 62px;
 }
