--- a/style.css
+++ b/style.css
@@ -45,11 +45,12 @@ body {
 
 .header {
     border-bottom: 1px solid #EFEFEF;
+    height: 120px;
+    padding: 20px 0;
 }
 
 .logo {
     float: left;
-    margin: 20px 0;
 }
 
 .right-header {
@@ -62,7 +63,7 @@ body {
     font-size: 16px;
     line-height: 19px;
     color: black;
-    margin: 50px 40px 51px 0;
+    margin: 30px 40px 30px 0;
 }
 
 .button {
@@ -320,6 +321,7 @@ body {
 
 .contacts {
     padding: 37px 0;
+    height: 120px;
 }
 
 .social {
@@ -351,4 +353,11 @@ body {
 
 .footer-right {
     float: right;
+}
+
+.footer-link {
+    font-size: 12px;
+    line-height: 14px;
+    color: #828282;
+    text-decoration: none;
 }
